--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 NotBlank=Não pode estar em branco!
 Size=Tamanho deve estar entre {2} e {1} caracteres!
 Email=Não é um endereço de e-mail válido!
+NotNull=Não pode ser nulo!
